--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 <title>Metronome</title>
 
-<link href="/resources/image/icon\.png" rel="shortcut icon" type="image/png">
+<link href="resources/image/icon\.png" rel="shortcut icon" type="image/png">
 <style>
 html {
   box-sizing: border-box;
