--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@ input[type=range]::-moz-range-thumb {
 <div id="main">
   <div>
     <div>
-      <div>BPM:<span id="bpm-display"></span></div>
+      <div><span id="bpm-label"></span>: <span id="bpm-display"></span></div>
       <div><input type="range" min="1" max="180" id="bpm"></div>
-      <button type="button" id="start">start</button>
+      <button type="button" id="start"></button>
     </div>
   </div>
 </div>
